# RUPTURA

./: .gitignore  CMakeLists.txt  README.md  convert.py  pyproject.toml  setup.py
app/: CMakeLists.txt
docs/: Doxyfile
examples/: simulation.json
examples/BEA-alkanes-C7/breakthrough/: breakthrough.ipynb  column.json  simulation.input  simulation.json
examples/BEA-alkanes-C7/fitting/: simulation.json
examples/BEA-alkanes-C7/iast/: mixture.ipynb  simulation.json
examples/BEA-alkanes-C7/original/: column.json  simulation.json
examples/BEA-alkanes-C7/sirk3/: column.json  old.json  orig.json  simulation.json
examples/CoBDP-alkanes-C6/breakthrough/: component_0_.data  component_1_nC6.data  component_2_2MP.data  component_3_3MP.data  component_4_23DMB.data  component_5_22DMB.data  make_graphs  make_movie_Dpdt  make_movie_Dqdt  make_movie_P  make_movie_Pnorm  make_movie_Pt  make_movie_Q  make_movie_Qeq  make_movie_V  make_movies  plot_breakthrough  plot_column_Dpdt  plot_column_Dqdt  plot_column_P  plot_column_Pnorm  plot_column_Pt  plot_column_Q  plot_column_Qeq  plot_column_V  simulation.input  simulation.json
examples/CoBDP-alkanes-C6/fitting/: make_graphs  plot_fit_component_0_nC6  simulation.json
examples/CoBDP-alkanes-C6/iast/: component_0_nC6.data  component_1_2MP.data  component_2_3MP.data  component_3_23DMB.data  component_4_22DMB.data  make_graphs  plot_mixture  plot_mixture_mol_fractions  plot_pure_components  simulation.json
examples/CoBDP-alkanes-C6/original/: simulation.json
examples/CoBDP-xylenes/breakthrough/: simulation.input  simulation.json
examples/CoBDP-xylenes/fitting/: simulation.json
examples/CoBDP-xylenes/iast/: simulation.json
examples/CoBDP-xylenes/original/: simulation.json
examples/Cu(dhbc)2(4,4’bpy)/fitting/: simulation.json
examples/Cu(dhbc)2(4,4’bpy)/iast/: mixture.ipynb  simulation.json
examples/Fe-MOF-74_Olefin/breakthrough/: simulation.json
examples/Fe-MOF-74_Olefin/fitting/: simulation.json
examples/Fe-MOF-74_Olefin/iast/: simulation.json
examples/JUC-77-xylenes/breakthrough/: simulation.json
examples/JUC-77-xylenes/fitting/: simulation.json
examples/JUC-77-xylenes/iast/: simulation.json
examples/MAF-6-alkanes-C6/breakthrough/: simulation.json
examples/MAF-6-alkanes-C6/fitting/: simulation.json
examples/MAF-6-alkanes-C6/iast/: simulation.json
examples/MAF-X8-xylenes/breakthrough/: simulation.input  simulation.json
examples/MAF-X8-xylenes/fitting/: simulation.json
examples/MAF-X8-xylenes/iast/: simulation.json
examples/MAF-X8-xylenes/implicit/: simulation.json
examples/MFI-xylenes/breakthrough/: simulation.input  simulation.json
examples/MFI-xylenes/fitting/: simulation.json
examples/MFI-xylenes/iast/: simulation.json
examples/MIL-125-NH2-xylenes/breakthrough/: simulation.json
examples/MIL-125-NH2-xylenes/fitting/: simulation.json
examples/MIL-125-NH2-xylenes/iast/: simulation.json
examples/MIL-47-xylenes/breakthrough/: simulation.input  simulation.json
examples/MIL-47-xylenes/fitting/: simulation.json
examples/MIL-47-xylenes/iast/: simulation.json
examples/MOR-CO2-C3H8/breakthrough/: breakthrough.ipynb  simulation.input  simulation.json
examples/MOR-CO2-C3H8/siast/: simulation.json
examples/ZIF-77-alkanes-C5-C6-C7/breakthrough/: simulation.json
examples/ZIF-77-alkanes-C5-C6-C7/fitting/: simulation.json
examples/ZIF-77-alkanes-C5-C6-C7/iast/: simulation.json
examples/fe2bdp3-alkanes-C6/breakthrough/: simulation.json
examples/fe2bdp3-alkanes-C6/fitting/: simulation.json
examples/fe2bdp3-alkanes-C6/iast/: simulation.json
examples/new/: column.json  orig.json
examples/pusan/: column.json
examples/pusan_energy/: column.json
examples/python/: breakthrough.ipynb  breakthrough.py  iast.ipynb  iast.py
examples/susanne/1e5P_298K/: simulation.json
ruptura/: CMakeLists.txt  __init__.py  base_plotly.py  plot_breakthrough.py  plot_fitting.py  plot_mixture.py  pybindings.cpp  ruptura.py  utils.py
src/: __init__.py  bindings.cpp  breakthrough.cpp  breakthrough.h  breakthrough_state.cpp  breakthrough_state.h  column.cpp  column.h  column_multibed.cpp  column_multibed.h  compile.bat  component.cpp  component.h  fitting.cpp  fitting.h  hash_combine.h  inputreader.cpp  inputreader.h  isotherm.cpp  isotherm.h  json.h  main.cpp  makefile  mixture_prediction.cpp  mixture_prediction.h  multi_site_isotherm.cpp  multi_site_isotherm.h  random_numbers.h  ruptura.py  special_functions.cpp  special_functions.h  sweep.h  swing_adsorption.cpp  swing_adsorption.h  test.cpp  test.h  timing.h  utils.h  utils.py
src/integrators/: #cvode.cpp#  #cvode.h#  compute.cpp  compute.h  compute_multibed.cpp  compute_multibed.h  cvode.cpp  cvode.h  rk3.cpp  rk3.h  rk3_si.cpp  rk3_si.h
