[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ruptura"
version = "2.0.0"
authors = [
  { name = "Shrinjay Sharma" },
  { name = "Salvador R.G. Balestra" },
  { name = "Richard Baur" },
  { name = "Umang Agarwal" },
  { name = "Eric Zuidema" },
  { name = "Marcello Rigutto" },
  { name = "Sofia Calero" },
  { name = "Thijs J.H. Vlugt" },
  { name = "David Dubbeldam" },
]

[tool.setuptools]
zip-safe = false
packages = ["ruptura"]

[tool.setuptools.package-dir]
ruptura = "ruptura"
